--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-intl": "^4.3.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
